[package]
name = "jr-rs"
version = "0.1.0"
authors = ["Dave Glassanos <david.glassanos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "jr"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
serde = "1.0.124"
serde_json = "1.0.64"
lazy_static = "1.4.0"
colored_json = "2.1.0"